# jortt-report

./: .coverage  .env.example  CLAUDE.md  QUERYING.md  README.md  SUMMARY.md  justfile  notebook.py  pyproject.toml
jortt_duck/: __main__.py  app.py  auth.py  pipeline.py
jortt_duck/layouts/: app.grid.json
jortt_report/: pipeline.py  tui.py
